--- a/src/app.html
+++ b/src/app.html
@@ -15,7 +15,7 @@
     />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" data-theme="crimson">
+  <body data-sveltekit-preload-data="hover" data-theme="">
     <div style="display: contents" class="h-full overflow-hidden">
       %sveltekit.body%
     </div>
