--- a/src/app.html
+++ b/src/app.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <script src="https://cdn.plyr.io/3.7.8/plyr.js"></script>
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.7.8/plyr.css" />
+    <script>
+      const player = new Plyr('#player');
+    </script>
     <meta name="viewport" content="width=device-width" />
     <link
       href="./../node_modules/@fortawesome/fontawesome-free/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link href="https://vjs.zencdn.net/8.6.1/video-js.css" rel="stylesheet" />
-    <link
-      href="https://unpkg.com/@videojs/themes@1/dist/city/index.css"
       rel="stylesheet"
     />
     %sveltekit.head%
@@ -19,6 +19,5 @@
     <div style="display: contents" class="h-full overflow-hidden">
       %sveltekit.body%
     </div>
-    <script src="https://vjs.zencdn.net/8.6.1/video.min.js"></script>
   </body>
 </html>
